Ver.1.0.7
新規機能
・FTPダウンロード、アップロードに対応

Ver.1.0.6
新規機能
・FTPに対応
改善
・OneDriveのライセンス表示に対応

Ver.1.0.5
新規機能
・GoogleDriveに対応(更新不可)
・OneDriveに対応
バグ改修
・Dropboxファイル一覧画面で、作成ツールバーボタンが動作しない不具合を修正
・各ファイル操作アクションシートで、ディレクトリを選択した際「文字エンコードを指定して開く」が選択できる不具合を修正

Ver.1.0.4
新規機能
・HTMLとMarkdownのプレビューに対応
・単語検索に対応
バグ改修
・Dropboxファイル一覧の画面レイアウト崩れを修正

Ver.1.0.3
新機能
・入力画面でUndo/Redoに対応(スマホのみ)
バグ改修
・拡張キーボードの記号入力で、記号リストの切替えに誤りがあったために修正
・ローカルファイル追加で2階層以上のディレクトリにファイルやディレクトリが作成できない不具合を修正
・ローカルファイル一覧画面でディレクトリをロングタップした時のアクションシートの内容の誤りを修正

Ver.1.0.2
新機能
・文字エンコーディングを指定して開くに対応
改善
・Dropboxファイル編集画面で、ファイルが開けない場合のエラーメッセージをエラー要因により細分化

Ver.1.0.1
新機能
・Dropboxに対応

Ver.1.0.0
・新規公開