@@ -1,0 +1,67 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+    <dependencies>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+    </dependencies>
+    <objects>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EditFtpFileViewController" customModule="PWEditor" customModuleProvider="target">
+            <connections>
+                <outlet property="bannerView" destination="nQg-xt-Qjb" id="KVD-dq-HbP"/>
+                <outlet property="myView" destination="rQE-mN-d2X" id="pE4-xf-PLZ"/>
+                <outlet property="previewToolbarButton" destination="Avj-CA-7mS" id="NhJ-7a-ULh"/>
+                <outlet property="toolbar" destination="FWw-Ab-H4Q" id="tOs-Sf-vGB"/>
+                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+            </connections>
+        </placeholder>
+        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rQE-mN-d2X" customClass="MyView">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="474"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
+                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FWw-Ab-H4Q">
+                    <rect key="frame" x="0.0" y="474" width="320" height="44"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="44" id="xcW-v2-a1D"/>
+                    </constraints>
+                    <items>
+                        <barButtonItem title="Preview" id="Avj-CA-7mS">
+                            <connections>
+                                <action selector="previewToolbarButtonPressed:" destination="-1" id="plJ-Dn-EG3"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="f98-GN-1If"/>
+                    </items>
+                </toolbar>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nQg-xt-Qjb" customClass="GADBannerView">
+                    <rect key="frame" x="0.0" y="518" width="320" height="50"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="pgu-F3-EGh"/>
+                    </constraints>
+                </view>
+            </subviews>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="FWw-Ab-H4Q" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="CdT-UI-mOl"/>
+                <constraint firstItem="FWw-Ab-H4Q" firstAttribute="top" secondItem="rQE-mN-d2X" secondAttribute="bottom" id="LMZ-b0-sHC"/>
+                <constraint firstItem="rQE-mN-d2X" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="MOs-Ei-Prd"/>
+                <constraint firstItem="rQE-mN-d2X" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="NoJ-hT-TyK"/>
+                <constraint firstItem="rQE-mN-d2X" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Nsu-sS-d1D"/>
+                <constraint firstAttribute="trailing" secondItem="FWw-Ab-H4Q" secondAttribute="trailing" id="TS6-Vx-2qZ"/>
+                <constraint firstAttribute="bottom" secondItem="nQg-xt-Qjb" secondAttribute="bottom" id="eQ0-sx-OSY"/>
+                <constraint firstItem="FWw-Ab-H4Q" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="lTy-Tj-Imj"/>
+                <constraint firstAttribute="trailing" secondItem="rQE-mN-d2X" secondAttribute="trailing" id="nOB-to-sbP"/>
+                <constraint firstItem="nQg-xt-Qjb" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="rpc-bf-igT"/>
+                <constraint firstItem="nQg-xt-Qjb" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="s43-gV-t20"/>
+                <constraint firstAttribute="trailing" secondItem="nQg-xt-Qjb" secondAttribute="trailing" id="xhp-tX-gYA"/>
+                <constraint firstItem="nQg-xt-Qjb" firstAttribute="top" secondItem="FWw-Ab-H4Q" secondAttribute="bottom" id="y6V-ty-RNw"/>
+            </constraints>
+            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+        </view>
+    </objects>
+</document>
