@@ -1,47 +1,0 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
-    <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10117"/>
-    </dependencies>
-    <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EditFtpFileViewController" customModule="PWEditor" customModuleProvider="target">
-            <connections>
-                <outlet property="bannerView" destination="nQg-xt-Qjb" id="KVD-dq-HbP"/>
-                <outlet property="myView" destination="ohp-TO-grd" id="U6d-Rz-n9q"/>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
-            </connections>
-        </placeholder>
-        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ohp-TO-grd" customClass="MyView">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="518"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nQg-xt-Qjb" customClass="GADBannerView">
-                    <rect key="frame" x="0.0" y="518" width="320" height="50"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="50" id="pgu-F3-EGh"/>
-                    </constraints>
-                </view>
-            </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-            <constraints>
-                <constraint firstItem="nQg-xt-Qjb" firstAttribute="top" secondItem="ohp-TO-grd" secondAttribute="bottom" id="4TL-S2-Y99"/>
-                <constraint firstItem="ohp-TO-grd" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="CuZ-AI-6DH"/>
-                <constraint firstItem="ohp-TO-grd" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="MGa-hz-QjH"/>
-                <constraint firstAttribute="trailing" secondItem="ohp-TO-grd" secondAttribute="trailing" id="QfY-Hb-6Eh"/>
-                <constraint firstItem="ohp-TO-grd" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="cJE-Bh-ea1"/>
-                <constraint firstAttribute="bottom" secondItem="nQg-xt-Qjb" secondAttribute="bottom" id="eQ0-sx-OSY"/>
-                <constraint firstItem="nQg-xt-Qjb" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="rpc-bf-igT"/>
-                <constraint firstItem="nQg-xt-Qjb" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="s43-gV-t20"/>
-                <constraint firstAttribute="trailing" secondItem="nQg-xt-Qjb" secondAttribute="trailing" id="xhp-tX-gYA"/>
-            </constraints>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-        </view>
-    </objects>
-</document>
