@@ -1,0 +1,3 @@
+
+/* Class = "UIBarButtonItem"; title = "Preview"; ObjectID = "Avj-CA-7mS"; */
+"Avj-CA-7mS.title" = "プレビュー";
