@@ -1,6 +1,9 @@
 Ver.1.0.7
 新規機能
-・FTPダウンロード、アップロードに対応
+・FTPダウンロード、アップロードに対応(ローカルのみ)
+改善
+・FTPファイル編集画面からHTML,Markdownファイルのプレビュー表示に対応
+・BlackRaccoonのライセンス表示に対応
 
 Ver.1.0.6
 新規機能
